# cpp-lib-template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: foo.h
source/: foo.cpp
tests/: CMakeLists.txt  testFooLib.cpp  testbasicgtest.cpp
